--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,20 +1,19 @@
 <header class="header" itemscope itemtype="http://schema.org/SiteNavigationElement" aria-label="Main navigation">
   <div class="container">
     <div class="header__inner">
-
-        <div class="header__logo--container">
-           
-          </div>
-      <!--
+      
       <a class="header__logo" href="{{ '/' | relative_url }}">
         <div class="header__logo--container">
           {% include logo.svg %}
         </div>
       </a>
-    -->
+    
       <nav class="header__links">
         <div class="container header__links-wrapper">
-          <a class="header__link" href="{{ '/' | relative_url }}" itemprop="url"><span itemprop="name">Home</span></a>
+          <a class="header__link" href="{{ '/blog' | relative_url }}" itemprop="url"><span itemprop="name">Blog</span></a>
+
+          <a class="header__link" href="{{ '/' | relative_url }}" itemprop="url"><span itemprop="name">Portfolio</span></a>
+
           <!--
           <a class="header__link" href="{{ '/about' | relative_url }}" itemprop="url"><span itemprop="name">About</span></a>
           
