--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,10 +18,10 @@ layout: compress
 
     {% include header.html %}
 
-    <div class="hero lazyload" data-bg="{{site.url}}/assets/img/posts/sleek_lg.jpg">
+    <div class="hero lazyload" data-bg="{{site.url}}/assets/img/connection.jpg">
       <div class="hero__wrap">
-        <h1 class="hero__title">Sleek</h1>
-        <p class="hero__meta">Modern Jekyll theme focused on speed performance & SEO best practices</p>
+        <h1 class="hero__title">{{ page.title }}</h1>
+        <p class="hero__meta"> {{ page.subtitle }}</p>
       </div>
     </div>
 
