--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -39,6 +39,12 @@ figure {
   margin: 0;
 }
 
+.portrait {
+  width: 40%;
+  margin: auto;
+  padding-bottom: 2em;
+}
+
 // responsive videos
 .videowrapper {
   float: none;
